hphp/hack/test/typecheck/strict_consistent_construct_true/errors_1.php.exp
ERROR: File "errors_1.php", line 7, characters 16-38:
An abstract class cannot extend a nonabstract class that is `__ConsistentConstruct`. `AbstractChildOfDirectCC` is abstract and `ConcreteCCDirect` is `__ConsistentConstruct`. (Typing[4508])
  File "errors_1.php", line 3, characters 7-22:
  Declaration is here
ERROR: File "errors_1.php", line 14, characters 16-41:
An abstract class cannot extend a nonabstract class that is `__ConsistentConstruct`. `AbstractChildOfInheritedCC` is abstract and `ConcreteInheritsCC` is `__ConsistentConstruct` (inherited attribute). (Typing[4508])
  File "errors_1.php", line 11, characters 7-24:
  Declaration is here
